# Kimi-AI-K2-Chat-App

./: DEPLOYMENT_GUIDE.md  README.md  kimi_chat_app.py  pyproject.toml  run_app.bat  run_app.sh  setup.py  test_kimi_api.py
